--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -36,7 +36,7 @@
   &.menu__cbtn
     min-height: 55px
     +rmin(1440)
-      min-height: 88px
+      min-height: 60px
     +rmin(1920)
       min-height: 105px
 
@@ -140,6 +140,11 @@
     letter-spacing: 4px
     transition: text-shadow 0.3s ease-in-out, padding-bottom 0.3s ease-in-out
     +rmin(1440)
+      font-size: 25px
+      padding:
+        left: 20px
+        right: 20px
+    +rmin(1920)
       font-size: 35px
       padding:
         left: 30px
@@ -160,10 +165,10 @@
     .season__container-cbtn &,
     .menu__cbtn &
       padding-top: 11px
-      letter-spacing: 6px
+      letter-spacing: 5px
       font-size: 40px
       +rmin(1440)
-        font-size: 65px
+        font-size: 60px
       +rmin(1920)
         font-size: 80px
 
