--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -53,6 +53,8 @@ html
     +r(1023)
       padding-top: 0
     +rmin(1440)
+      padding-top: 90px
+    +rmin(1920)
       padding-top: 120px
 
 .container
