--- a/src/sass/components/_newsBlock.sass
+++ b/src/sass/components/_newsBlock.sass
@@ -5,6 +5,9 @@
     justify-content: space-between
     margin-bottom: 20px
     +rmin(1440)
+      justify-content: center
+      margin-bottom: 30px
+    +rmin(1920)
       margin-bottom: 60px
 
     &-elem
@@ -15,6 +18,10 @@
       background-color: transparent
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
       +rmin(1440)
+        margin: 15px 25px
+        max-width: 360px
+        max-height: 360px
+      +rmin(1920)
         margin: 15px
 
       &:hover
