--- a/src/sass/components/_lang.sass
+++ b/src/sass/components/_lang.sass
@@ -15,7 +15,7 @@
     top: 20px
     bottom: 50px
   +rmin(1440)
-    padding-left: 50px
+    padding-left: 140px
     margin:
       top: 35px
       bottom: 86px
@@ -27,10 +27,10 @@
   &__name
     @extend %fontPropertiesLang
     transition: color .3s ease-in-out
-
+    text-shadow: 0 0 36px rgba(0, 0, 0, 0.5)
     font-size: 13px
     +rmin(1440)
-      font-size: 22px
+      font-size: 18px
     +rmin(1920)
       font-size: 24px
 
@@ -43,7 +43,7 @@
 
     font-size: 13px
     +rmin(1440)
-      font-size: 22px
+      font-size: 18px
     +rmin(1920)
       font-size: 24px
 
