--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -51,7 +51,7 @@
     width: 100%
     min-height: 100%
     +rmin(1440)
-      padding-top: 50px
+      padding-top: 0
       min-height: calc(100% - 50px)
     +rmin(1920)
       padding-top: 60px
@@ -77,8 +77,9 @@
       right: auto
     +rmin(1440)
       //margin-top: 50px
-      transform: scale(1)
+      transform: scale(0.75)
     +rmin(1920)
+      transform: scale(1)
       //margin-top: 60px
 
   &__row
@@ -89,7 +90,7 @@
       bottom: 77px
     +rmin(1440)
       padding:
-        top: 45px
+        top: 25px
         bottom: 87px
     +rmin(1920)
       padding:
@@ -111,10 +112,10 @@
     font-size: 14px
     margin-bottom: 31px
     +rmin(1440)
-      padding-left: 60px
+      padding-left: 140px
       margin:
-        bottom: 35px
-      font-size: 22px
+        bottom: 10px
+      font-size: 20px
     +rmin(1920)
       font-size: 24px
       margin:
