--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -50,9 +50,9 @@
       right: 30px
       bottom: 107px
     +rmin(1440)
-      width: 600px
+      width: 495px
       padding:
-        top: 78px
+        top: 63px
         left: 50px
         right: 50px
         bottom: 117px
@@ -71,7 +71,7 @@
       color: $colorNobel
       font-size: 12px
       +rmin(1440)
-        font-size: 22px
+        font-size: 17px
       +rmin(1920)
         font-size: 24px
     &-number
@@ -104,7 +104,7 @@
 
       font-size: 20px
       +rmin(1440)
-        font-size: 35px
+        font-size: 30px
       +rmin(1920)
         font-size: 40px
 
@@ -112,7 +112,7 @@
     &-wrap
       margin-bottom: 20px
       +rmin(1440)
-        margin-bottom: 40px
+        margin-bottom: 30px
       +rmin(1920)
         margin-bottom: 50px
 
@@ -120,7 +120,7 @@
     &-wrap
       margin-bottom: 20px
       +rmin(1440)
-        margin-bottom: 80px
+        margin-bottom: 60px
       +rmin(1920)
         margin-bottom: 90px
 
@@ -139,8 +139,8 @@
       font-size: 10px
       margin-bottom: 20px
       +rmin(1440)
-        font-size: 22px
-        margin-bottom: 33px
+        font-size: 18px
+        margin-bottom: 22px
       +rmin(1920)
         font-size: 24px
         margin-bottom: 36px
@@ -153,7 +153,7 @@
       margin-bottom: 20px
       +rmin(1440)
         height: 60px
-        margin-bottom: 25px
+        margin-bottom: 15px
       +rmin(1920)
         margin-bottom: 30px
 
@@ -166,6 +166,10 @@
         border: 3px solid $colorBlack
         transition: border-color 0.3s ease-in-out
         +rmin(1440)
+          width: 45px
+          height: 45px
+          border-width: 4px
+        +rmin(1920)
           width: 60px
           height: 60px
           border-width: 5px
@@ -192,6 +196,8 @@
             visibility: hidden
 
           +rmin(1440)
+            transform: scale(0.75)
+          +rmin(1920)
             transform: scale(1)
 
     &-field
@@ -199,21 +205,21 @@
       min-height: 40px
       margin-bottom: 10px
       +rmin(1440)
-        margin-bottom: 25px
+        margin-bottom: 15px
       +rmin(1920)
         margin-bottom: 30px
 
       &--email
         margin-bottom: 10px
         +rmin(1440)
-          margin-bottom: 33px
+          margin-bottom: 23px
         +rmin(1920)
           margin-bottom: 36px
 
       &--date
         margin-bottom: 40px
         +rmin(1440)
-          margin-bottom: 50px
+          margin-bottom: 35px
         +rmin(1920)
           margin-bottom: 60px
 
@@ -240,6 +246,9 @@
           text-align: center
 
         +rmin(1440)
+          height: 50px
+          border-width: 4px
+        +rmin(1920)
           height: 60px
           border-width: 5px
 
@@ -249,7 +258,7 @@
 
         font-size: 14px
         +rmin(1440)
-          font-size: 22px
+          font-size: 20px
         +rmin(1920)
           font-size: 24px
 
