--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -118,6 +118,7 @@
 
   &__block
     display: flex
+    align-items: center
     margin-bottom: 50px
     +rmin(1440)
       margin-bottom: 103px
@@ -171,8 +172,6 @@
     &--right
       width: 100%
       padding-top: 0
-      +rmin(1440)
-        padding-top: 30px
 
       .programs__block--reverse &
         padding-left: 50px
@@ -217,7 +216,7 @@
         margin-bottom: 60px
 
       h4
-        margin: 10px 50px 10px 0
+        margin: 0 50px 10px 0
         font:
           weight: bold
         color: $colorFuelYellow
