--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -204,6 +204,8 @@
         height: 540px
         margin: 0 auto 80px
       +rmin(1920)
+        max-width: 100%
+        height: 100%
         min-height: 720px
 
       img
