--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -71,9 +71,8 @@
   &--active
     &:hover
       .cbutton__text
-        //padding-bottom: 7px
         text-shadow: 1px 1px 10px rgba(0,0,0,0.5)
-        transition: text-shadow 0.3s ease-in-out, padding-bottom 0.3s ease-in-out
+        transition: text-shadow 0.3s ease-in-out, top 0.3s ease-in-out
 
       .cbutton__block-bg
         transition: height 0.3s ease-in-out
@@ -138,7 +137,7 @@
       weight: bold
       size: 20px
     letter-spacing: 4px
-    transition: text-shadow 0.3s ease-in-out, padding-bottom 0.3s ease-in-out
+    transition: text-shadow 0.3s ease-in-out, top 0.3s ease-in-out
     +rmin(1440)
       font-size: 25px
       padding:
