--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -70,6 +70,7 @@
     &-text
       p
         font-size: 14px
+        line-height: 1.5
         letter-spacing: 1.1px
         margin-left: 40%
         +rmin(1440)
