--- a/src/sass/components/_modal.sass
+++ b/src/sass/components/_modal.sass
@@ -31,7 +31,11 @@
         padding: 30px 0 67px 0
 
       .js-chooseModal
-        margin-top: 50px
+        margin-top: 30px
+        +rmin(1440)
+          margin-top: 40px
+        +rmin(1920)
+          margin-top: 50px
 
     &-data
       padding: 20px 40px 47px 47px
@@ -75,10 +79,15 @@
         cursor: pointer
         display: flex
         align-items: center
-        height: 90px
+        height: 50px
         margin-bottom: 0
         background-color: transparent
         transition: background-color 0.3s ease-in-out
+        +rmin(1440)
+          height: 70px
+        +rmin(1920)
+          height: 90px
+
 
         &.is-choose
           background-color: $colorFuelYellow !important
@@ -111,23 +120,41 @@
 
       &--left
         .modal__form-choose &
-          padding-left: 55px
-          font-size: 24px
+          padding-left: 15px
+          font-size: 16px
           color: #fff
+          +rmin(1440)
+            padding-left: 30px
+            font-size: 20px
+          +rmin(1920)
+            padding-left: 55px
+            font-size: 24px
 
           svg
             fill: $colorWhite
-            width: 60px
-            height: 60px
+            width: 40px
+            height: 40px
             margin-right: 25px
             transition: fill 0.3s ease-in-out
+            +rmin(1440)
+              width: 50px
+              height: 50px
+            +rmin(1920)
+              width: 60px
+              height: 60px
 
       &--right
         .modal__form-choose &
-          padding-left: 55px
-          font-size: 30px
+          padding-left: 35px
+          font-size: 20px
           font-weight: bold
           color: $colorFuelYellow
+          +rmin(1440)
+            padding-left: 45px
+            font-size: 25px
+          +rmin(1920)
+            padding-left: 55px
+            font-size: 30px
 
       &--email
         margin-bottom: 10px
