--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -216,7 +216,7 @@
         margin-bottom: 60px
 
       h4
-        margin: 0 50px 10px 0
+        margin: 10px 50px 10px 0
         font:
           weight: bold
         color: $colorFuelYellow
