--- a/src/pug/components/_modal.pug
+++ b/src/pug/components/_modal.pug
@@ -1,7 +1,7 @@
 // FOOTER :: START
 
 //#callback.modal.mfp-hide.animated
-#callback.modal.animated
+#callback.modal.animated.mfp-hide
 
   form.modal__form.modal__form-choose.is-active.animated
 
