--- a/src/sass/components/_modal.sass
+++ b/src/sass/components/_modal.sass
@@ -91,7 +91,11 @@
 
         &.is-choose
           background-color: $colorFuelYellow !important
-
+          .modal__form-field--left
+            svg
+              fill: $colorBlack
+              transition: fill 0.3s ease-in-out
+              
           .modal__form-field--left,
           .modal__form-field--right
             color: #000
