--- a/src/sass/components/_newsBlock.sass
+++ b/src/sass/components/_newsBlock.sass
@@ -14,13 +14,13 @@
       cursor: pointer
       overflow: hidden
       position: relative
-      margin: 15px 35px
+      margin: 15px 15px
       background-color: transparent
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
       +rmin(1440)
         margin: 15px 25px
-        max-width: 360px
-        max-height: 360px
+        // max-width: 360px
+        // max-height: 360px
       +rmin(1920)
         margin: 15px
 
