--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -199,9 +199,13 @@
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
       min-height: 380px
       height: 380px
+      margin-left: 60px
+      margin-right: 60px
+      width: auto
       +rmin(1440)
         max-width: 1170px
         height: 540px
+        width: 100%
         margin: 0 auto 80px
       +rmin(1920)
         max-width: 100%
@@ -228,14 +232,15 @@
       align-items: flex-end
       justify-content: space-between
       padding:
-        top: 75px
+        top: 50px
         right: 90px
-        bottom: 75px
+        bottom: 50px
       text-align: right
-      min-height: 640px
+      min-height: 380px
       +rmin(1440)
         padding:
           top: 50px
+          bottom: 75px
           right: 70px
         min-height: 550px
       +rmin(1920)
