--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -18,11 +18,13 @@
     transition: height 0.3s ease-in-out
     +rmin(1440)
       height: 90px
-    +rmin(1920)
+      // +rmin(1920)
       height: 120px
 
     .is-fixed &
-      height: 90px
+      height: 55px
+      +rmin(1440)
+        height: 90px
       transition: height 0.3s ease-in-out
 
   &__hamburger
@@ -34,11 +36,13 @@
     +rmin(1440)
       height: 90px
       padding-left: 45px
-    +rmin(1920)
+      // +rmin(1920)
       height: 120px
       padding-left: 60px
     .is-fixed &
-      height: 90px
+      height: 55px
+      +rmin(1440)
+        height: 90px
 
     &:hover
       .header__hamburger-line
@@ -55,7 +59,7 @@
       +rmin(1440)
         width: 30px
         margin-right: 40px
-      +rmin(1920)
+        // +rmin(1920)
         width: 42px
         margin-right: 60px
 
@@ -69,7 +73,7 @@
       +rmin(1440)
         height: 3px
         margin-bottom: 3px
-      +rmin(1920)
+        // +rmin(1920)
         height: 4px
         margin-bottom: 3px
       &:last-child
@@ -93,7 +97,7 @@
       font-size: 11px
       +rmin(1440)
         font-size: 18px
-      +rmin(1920)
+        // +rmin(1920)
         font-size: 24px
 
   &__logotype
@@ -106,7 +110,7 @@
     margin: auto
     +rmin(1440)
       transform: translateY(-50%) scale(0.75)
-    +rmin(1920)
+      // +rmin(1920)
       transform: translateY(-50%) scale(1)
 
 
@@ -127,7 +131,7 @@
       padding-right: 45px
       font-size: 14px
       line-height: 1.5
-    +rmin(1920)
+      // +rmin(1920)
       width: 310px
       padding-right: 55px
       font-size: 24px
