--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -297,8 +297,12 @@
     display: flex
     justify-content: space-between
     margin-bottom: 100px
+    margin-left: 50px
+    margin-right: 50px
     +rmin(1440)
       margin-bottom: 120px
+      margin-left: 0
+      margin-right: 0
     +rmin(1920)
       margin-bottom: 140px
 
@@ -345,4 +349,3 @@
       +rmin(1920)
         height: 480px
         font-size: 40px
-
