--- a/src/sass/components/_social.sass
+++ b/src/sass/components/_social.sass
@@ -14,8 +14,7 @@
 
   &__name
     @extend %fontPropertiesSocial
-
-    text-shadow: 0 0 36px rgba(0, 0, 0, 0.5)
+    text-shadow: 0px 0px 26px rgba(0, 0, 0, 0.99)
     font-size: 13px
     transition: color .3s ease-in-out
     +rmin(1440)
@@ -35,5 +34,3 @@
       font-size: 18px
     +rmin(1920)
       font-size: 24px
-
-
