--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -15,7 +15,7 @@ block content
 
       .about__main-row.wow.wowFadeRight(data-animation-delay="0.35s")
 
-        +customBtn('about__main-cbtn', "О ГРУППЕ")
+        +customBtn('about__main-cbtn', "О группе")
 
         p.about__main-text!= "TAIKO in-Spiration - это дружная команда молодых и талантливых музыкантов, объединенных общим увлечением и любовью к японским барабанам тайко."
 
@@ -26,7 +26,7 @@ block content
 
     .container.wow.wowFadeUp(data-animation-delay="0.75s")
 
-      .about__info-slider.js-myCustomSlider(data-num=[7, 32, 18, 46, 3], data-text=["ЛЕТ","НОМЕРА","ТУРОВ","БРЕНДОВ","КЛИПА"])
+      .about__info-slider.js-myCustomSlider(data-num=[7, 32, 18, 46, 3], data-text=["Лет","Номера","туров","Брендов","Клипа"])
         -
           var infoArr = [
             "Мы появились на свет в 2011 году, и уже семь лет рабуем всех нашим творчеством. Первый учителем и вдохновителем стала Оксана Мосейчук, перкуссионист из Австрии. Спустя время судьба свела  нас с японским музыкантом и композитором Takuya Taniguchi, который подарил нашим барабанам современное звучание.",
@@ -51,14 +51,14 @@ block content
 
           .about__member-col
             p.about__member-hash!= "#лидер группы"
-            +customBtn('about__member-cbtn', "АЛЕКСАНДРА")
-            +customBtn('about__member-cbtn', "САМОХИНА")
+            +customBtn('about__member-cbtn', "Александра")
+            +customBtn('about__member-cbtn', "Самохина")
 
           .about__member-col
             p.about__member-cAt
               a(href="#")!= "@ALEX_TAIKO"
 
-      p.about__member-title!= "НАШИ БАРАБАНЩИЦЫ"
+      p.about__member-title!= "Наши барабанщицы"
 
     .about__member-grid
       -
@@ -78,14 +78,14 @@ block content
           .about__member-grid-hidden
             p
               a(href="#")!= "@SHELOMKA"
-            p!= "АНАСТАСИЯ"
-            p!= "ШЕЛОМОВА"
+            p!= "Анастасия"
+            p!= "Шеломова"
 
 
 
   .about__reviews
     .container.wow.wowFadeLeft(data-animation-delay="0.55s")
-      p.about__reviews-title!= "ОТЗЫВЫ"
+      p.about__reviews-title!= "Отзывы"
 
       .about__reviews-row.js-reviews
         .about__reviews-row
