--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -6,17 +6,17 @@ footer.footer
 
       .footer__row
         .footer__question
-          p.footer__question-title!= 'ПО ВОПРОСАМ ВЫСТУПЛЕНИЯ'
+          p.footer__question-title!= 'По вопросам выступления'
           a(href="tel:89629996662").footer__question-phone!= '8 (962) 999-666-2'
           br
-          a(href="mailto:info@taiko.moscow").footer__question-email!= 'INFO@TAIKO.MOSCOW'
+          a(href="mailto:info@taiko.moscow").footer__question-email!= 'info@taiko.moscow'
 
         a(href="#", js-downloadPdf).footer__present
           .footer__present-image
             .footer__present-bg
             .footer__present-icon.icon-pfd
           .footer__present-text
-            p.footer__present-title!= 'СКАЧАЙТЕ <br/> ПРЕЗЕНТАЦИЮ'
+            p.footer__present-title!= 'Скачайте <br/> Презентацию'
             p.footer__present-size!= 'PDF, 4МБ'
 
       .footer__row
