--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -10,7 +10,7 @@ header.header.animated
         span.header__hamburger-line.header__hamburger-line--2
         span.header__hamburger-line.header__hamburger-line--3
 
-      p.header__hamburger-text!= "МЕНЮ"
+      p.header__hamburger-text!= "Меню"
 
     a(href="homepage.html").header__logotype.icon-logotype
 
@@ -18,6 +18,6 @@ header.header.animated
       href="#"
       class="header__order"
       js-order
-    )!= "ЗАКАЗАТЬ<br/>ВЫСТУПЛЕНИЕ"
+    )!= "Заказать<br/>выступление"
         
 // HEADER :: END
