--- a/src/pug/components/_modal.pug
+++ b/src/pug/components/_modal.pug
@@ -28,7 +28,7 @@
         .modal__form-field--right
           | 100 000 p.
 
-    +customBtn('cbutton--active modal__cbtn js-chooseModal', "ЗАКАЗАТЬ")
+    +customBtn('cbutton--active modal__cbtn js-chooseModal', "Заказать")
 
   form.modal__form.modal__form-data.animated(js-modal)
 
@@ -36,14 +36,14 @@
     span!= "ЯПОНСКИЕ СЕЗОНЫ"
 
     .modal__form-field
-      input(type="text" name="name" placeholder="ВАШЕ ИМЯ")
+      input(type="text" name="name" placeholder="Ваше имя")
 
     .modal__form-field.modal__form-field--phone
-      input(type="tel" name="phone" placeholder="ВАШ НОМЕР")
+      input(type="tel" name="phone" placeholder="Ваш номер")
 
     .modal__form-field.modal__form-field--email
-      input(type="email" name="email" placeholder="ПОЧТА")
+      input(type="email" name="email" placeholder="почта")
 
-    +customBtnSubmit('cbutton--active modal__cbtn', "ОТПРАВИТЬ")
+    +customBtnSubmit('cbutton--active modal__cbtn', "Отправить")
 
 // FOOTER :: END
