--- a/src/pug/components/_social.pug
+++ b/src/pug/components/_social.pug
@@ -1,10 +1,10 @@
 // SOCIAL :: START
 -
   var socialArr = [
-    'INSTAGRAM',
-    'YOUTUBE',
-    'FACEBOOK',
-    'VKONTAKTE'
+    'instagram',
+    'youtube',
+    'facebook',
+    'vkontakte'
   ];
 
 .social
