--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -10,7 +10,7 @@ block content
   .news__main
     .container
 
-      +customBtn('news__main-cbtn wow wowFadeUp', "НОВОСТИ")
+      +customBtn('news__main-cbtn wow wowFadeUp', "Новости")
 
       +newsBlock(3, "news__wrap-elem--alone wow wowFadeUp")
 
@@ -22,7 +22,7 @@ block content
             else
               img(src="./img/ImagePreview-3_news.jpg")
             .news__wrap-hidden
-              p!= "ОТКРЫТИЕ<br/>ЮНИКЛО"
+              p!= "Открытие<br/>Юникло"
 
 
 block footer
