--- a/src/pug/programs.pug
+++ b/src/pug/programs.pug
@@ -22,33 +22,33 @@ block content
 
   .programs__main
 
-      +customBtn('programs__main-cbtn wow wowFadeDown', "ШОУ-ПРОГРАММЫ")
+      +customBtn('programs__main-cbtn wow wowFadeDown', "Шоу-программы")
 
 
   .programs__wrap
     .container
 
       // className, imgName, hashText, title, time, text
-      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "ШОУ НА ОТКРЫТИЕ", "15-40 мин.", programsTextArr[0])
+      +prgramsBlock("", "ImageBlock_programs", "#Барабанное шоу", "Шоу на открытие", "15-40 мин.", programsTextArr[0])
 
       // imgName, hashText, cbtnTex, time
-      +programFullBlock("ImageFullBlock_programs", "#ШОУ-ПРОГРАММА", "ЯПОНСКИЕ СЕЗОНЫ", "90 мин.")
+      +programFullBlock("ImageFullBlock_programs", "#шоу-программа", "японские сезоны", "90 мин.")
 
-      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "SAKURA BLOSSOM", "5 мин.", programsTextArr[1])
-      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "KITSUNE DANCE", "8 мин.", programsTextArr[2])
-      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "MORIOKA SANSA ODORI", "6 мин.", programsTextArr[3])
-      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "ONI DEMONS", "5 мин.", programsTextArr[4])
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#Барабанное шоу", "sakura blossom", "5 мин.", programsTextArr[1])
+      +prgramsBlock("", "ImageBlock_programs", "#Барабанное шоу", "kitsune dance", "8 мин.", programsTextArr[2])
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#Барабанное шоу", "Morioka sansa odori", "6 мин.", programsTextArr[3])
+      +prgramsBlock("", "ImageBlock_programs", "#Барабанное шоу", "oni demons", "5 мин.", programsTextArr[4])
 
-      +programFullBlock("ImageFullBlock_programs", "#ШОУ-СПЕКТАКЛЬ", "МОРЕ СИНЕГО ЛЕСА", "90 мин.")
+      +programFullBlock("ImageFullBlock_programs", "#ШОУ-СПЕКТАКЛЬ", "Море синего леса", "90 мин.")
 
-      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "ШЕСТВИЕ ОЙРАН", "5 мин.", programsTextArr[5])
-      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "HA NO AKI", "4 мин.", programsTextArr[6])
-      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "FUJI MUSUME", "3 мин.", programsTextArr[7])
-      +prgramsBlock("", "ImageBlock_programs", "#БАРАБАННОЕ ШОУ", "GEISHa KITSUNE", "3 мин.", programsTextArr[8])
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#Барабанное шоу", "шествие ойран", "5 мин.", programsTextArr[5])
+      +prgramsBlock("", "ImageBlock_programs", "#Барабанное шоу", "ha no aki", "4 мин.", programsTextArr[6])
+      +prgramsBlock("programs__block--reverse", "ImageBlock_programs", "#Барабанное шоу", "fuji musume", "3 мин.", programsTextArr[7])
+      +prgramsBlock("", "ImageBlock_programs", "#Барабанное шоу", "Geisha kitsune", "3 мин.", programsTextArr[8])
 
 
       .programs__wrap-row.wow.wowFadeUp(data-animation-delay="0.55s")
-        p.programs__suit-title!= "КОСТЮМЫ"
+        p.programs__suit-title!= "Костюмы"
 
         .programs__suit.js-programSuitSlider
           -for(var i = 0; i < 9; i++)
