--- a/src/pug/school.pug
+++ b/src/pug/school.pug
@@ -19,7 +19,7 @@ block content
 
           p.school__title!= "Стань частью"
 
-          +customBtn('school__main-cbtn', "TAIKO TEAM")
+          +customBtn('school__main-cbtn', "taiko team")
 
           .school__row-text
             p!= "Летом мы проводим интенсивные мастер-классы. Вы научитесь правильной стойке, базовым ритмам и различным техникам игры. Даже выучите несколько наших ярких номеров."
@@ -27,9 +27,9 @@ block content
             p!= "Скоро. Следите за новостями!"
 
           .footer__question
-            p!= 'ПО ВОПРОСАМ ЗАНЯТИЙ'
+            p!= 'по вопросам занятий'
             a(href="tel:89199994858").footer__question-phone!= '8 (919) 999-48-58'
-            a(href="mailto:school@taiko.moscow").footer__question-email!= 'SCHOOL@TAIKO.MOSCOW'
+            a(href="mailto:school@taiko.moscow").footer__question-email!= 'school@taiko.moscow'
 
       .school__wrap.wow.wowFadeUp(data-animation-delay="0.45s")
         include ./components/_social
