--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -91,6 +91,7 @@
 
     &-text
       color: $colorWhite
+      text-transform: uppercase
       font:
         weight: bold
       transition: color .25s ease-in-out
@@ -124,6 +125,7 @@
     font-weight: bold
     color: $colorFuelYellow
     text-align: right
+    text-transform: uppercase
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out
     font-size: 9px
     +rmin(1440)
