--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -83,6 +83,7 @@
     &-title
       font:
         weight: bold
+      text-transform: uppercase
       margin-bottom: 15px
       font-size: 30px
       +rmin(1440)
@@ -92,6 +93,7 @@
 
     &-subTitle
       font-size: 30px
+      text-transform: uppercase
       +rmin(1440)
         font-size: 47px
       +rmin(1920)
@@ -182,6 +184,7 @@
       text-align: center
       color: $colorFuelYellow
       margin-bottom: 20px
+      text-transform: uppercase
       font-size: 19px
       +rmin(1440)
         margin-bottom: 30px
