--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -12,7 +12,7 @@
   height: 100vh
   background-color: rgba($colorBlack, 0.5)
   transition: 0.45s
-
+  text-transform: uppercase
   .is-activeOrder &
     opacity: 1
     visibility: visible
@@ -261,4 +261,3 @@
           font-size: 20px
         +rmin(1920)
           font-size: 24px
-
