--- a/src/sass/components/_social.sass
+++ b/src/sass/components/_social.sass
@@ -11,6 +11,7 @@
   width: 100%
   text-align: center
   letter-spacing: 0
+  text-transform: uppercase
 
   &__name
     @extend %fontPropertiesSocial
