--- a/src/pug/components/_menu.pug
+++ b/src/pug/components/_menu.pug
@@ -13,12 +13,12 @@
       img(src="./img/ImageGirl_menu.png" class="menu__img menu__img--girl")
 
       .menu__row
-        a(href="#" class="menu__back" js-backMenu)!= "<&nbsp;&nbsp;НАЗАД"
+        a(href="#" class="menu__back" js-backMenu)!= "<&nbsp;&nbsp;Назад"
 
-        +customBtnLink("about.html", "cbutton--hover menu__cbtn", "О ГРУППЕ")
-        +customBtnLink("programs.html", "cbutton--hover menu__cbtn", "ПРОГРАММЫ")
-        +customBtnLink("school.html", "cbutton--hover menu__cbtn", "ШКОЛА")
-        +customBtnLink("contacts", "cbutton--hover menu__cbtn", "КОНТАКТЫ")
+        +customBtnLink("about.html", "cbutton--hover menu__cbtn", "О группе")
+        +customBtnLink("programs.html", "cbutton--hover menu__cbtn", "Программы")
+        +customBtnLink("school.html", "cbutton--hover menu__cbtn", "Школа")
+        +customBtnLink("contacts", "cbutton--hover menu__cbtn", "Контакты")
 
         include ../components/_language
         include ../components/_social
