--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -13,8 +13,8 @@ block content
       .homepage__main-wrap.wow.wowFadeDown(data-animation-delay="0.3s")
         p.homepage__main-title!= "#единственное в России"
 
-        +customBtn('homepage__main-cbtn', "ЯПОНСКОE")
-        +customBtn('homepage__main-cbtn', "БАРАБАННОЕ ШОУ")
+        +customBtn('homepage__main-cbtn', "Японское")
+        +customBtn('homepage__main-cbtn', "Барабанное шоу")
 
 
     // block programs
@@ -26,14 +26,14 @@ block content
       .container
 
         .homepage__program-wrap.wow.wowFadeLeft(data-animation-delay="0.7s")
-          p.homepage__program-title!= "ТАКАЯ ДАЛЕКАЯ И ЗАГАДОЧНАЯ ЯПОНИЯ"
-          p.homepage__program-subTitle!= "ОКАЖЕТСЯ СОВСЕМ РЯДОМ..."
+          p.homepage__program-title!= "Такая далекая и загадочная япония"
+          p.homepage__program-subTitle!= "Окажется совсем рядом..."
 
         .homepage__program-box.wow.wowFadeRight(data-animation-delay="0.7s")
 
           p.homepage__program-text!= "В нашем репертуаре по-настоящему 'ударные' фестивальные композиции и современные барабанные ритмы. Этническая музыка, традиционные костюмы и народные танцы погружают наших зрителей в атмосферу таинственной Азии и заставляют их сердца биться в такт барабанов!"
 
-          +customBtn('cbutton--active homepage__program-cbtn', "ПРОГРАММЫ")
+          +customBtn('cbutton--active homepage__program-cbtn', "Программы")
 
         img(src="./img/ImageWoman_main.png" data-animation-delay="0.7s" class="homepage__program-woman wow wowFadeUp")
 
@@ -48,13 +48,12 @@ block content
     // block news
     .homepage__news
       .container.wow.wowFadeUp(data-animation-delay="0.65s")
-        p.homepage__news-title!= "ПОСЛЕДНИЕ НОВОСТИ"
+        p.homepage__news-title!= "Последние новости"
 
 
         +newsBlock(3, "")
 
-        +customBtnLink("news.html", 'cbutton--active guhomepage__news-cbtn', "ДРУГИЕ НОВОСТИ")
+        +customBtnLink("news.html", 'cbutton--active guhomepage__news-cbtn', "Другие новости")
 
 block footer
   include ./components/_footer
-
