--- a/src/pug/season.pug
+++ b/src/pug/season.pug
@@ -10,80 +10,80 @@ block content
     var objData = [
       {
         "imageName" : "ImageSeason0_season",
-        "count" : "#БЛОК ПЕРВЫЙ",
-        "title" : "ХАРУ",
-        "hoverText" : "ЦВЕТОК... И ЕЩЕ ЦВЕТО...<br/>ТАК РАСПУСКАЕТСЯ ВИШНЯ<br/>ТАК ПРИБЫВАЕТ ТЕПЛО",
-        "hoverName" : "РАНСЕЦУ",
+        "count" : "#Блок первый",
+        "title" : "хару",
+        "hoverText" : "Цветок... И еще цвето...<br/>так распускается вишня<br/>так прибывает тепло",
+        "hoverName" : "Рансецу",
         "description" : "Это время, когда природа пробуждается ото сна и почки только начинают набухать, а свежий ветер парит над океаном. Когда уходят холода и появляется первая радуга, а перелетные птицы возвращаются домой. Когда на улицах и в садах розовым облаком поднимается цветущая сакура, оставляя на земле живой ковер из лепестков, падающих с деревьев. Это сезон Ханами — традиции любования цветами и особое состояние души.",
         "numbers" : [
-          "YATAI BAYASHI",
-          "SAKURA BLOSSOM",
-          "KYOME"
+          "Yatai bayashi",
+          "Sakura blossom",
+          "Kyome"
         ]
       },
       {
         "imageName" : "ImageSeason1_season",
-        "count" : "#БЛОК ВТОРОЙ",
-        "title" : "ЦУЮ",
-        "hoverText" : "ДОЖДЬ НАБЕГАЕТ ЗА ДОЖДЁМ,<br/>И СЕРДЦЕ БОЛЬШЕ НЕ ТРЕВОЖАТ<br/>РОСТКИ НА РИСОВЫХ ПОЛЯХ.",
-        "hoverName" : "БАСЁ",
+        "count" : "#Блок второй",
+        "title" : "цую",
+        "hoverText" : "Дождь набегает за дождём,<br/>и сердце больше не тревожат<br/>ростки на рисовых полях.",
+        "hoverName" : "Басё",
         "description" : "Это время бесконечно моросящего дождя, когда непрерывным потоком капает с неба вода, а зонтик становится главным героем событий. Это время затопленных равнин и живительной влаги, когда отцветает слива и наливаются соком плоды, а первые ростки риса и бамбука только начинают появляться. Это время цветения гортензий, когда в их голубизне утопают храмы и сады, улицы и города.",
         "numbers" : [
-          "SEN NO KAIKYO",
-          "SHI NO TUKI AME",
-          "YAMAGAWA"
+          "Sen no kaikyo",
+          "Shi no tuki ame",
+          "Yamagawa"
         ]
       },
       {
         "imageName" : "ImageSeason2_season",
-        "count" : "#БЛОК ТРЕТИЙ",
-        "title" : "НАТСУ",
-        "hoverText" : "ЕДВА-ЕДВА Я ДОБРЕЛ,<br/>ИЗМУЧЕННЫЙ, ДО НОЧЛЕГА...<br/>И ВДРУГ-ГЛИЦИНИЙ ЦВЕТЫ!",
-        "hoverName" : "БАСЁ",
+        "count" : "#Блок третий",
+        "title" : "Натсу",
+        "hoverText" : "Едва-едва я добрел,<br/>измученный, до ночлега...<br/>и вдруг-глициний цветы!",
+        "hoverName" : "Басё",
         "description" : "Это время буйного цветения, когда склоны покрыты мягким ковром из лаванды, гортензии, ирисов и других ярких цветов. Когда гора Фудзи притягивает к восхождению, а подножие окутывается разноцветными гроздья прекрасных цветов глицинии. Это время жарких ветров и ярких ночей, когда леса освещаются мерцанием светлячков.",
         "numbers" : [
-          "SHIMA UCHI",
-          "FUJI MUSUME",
-          "YODAN UCHI"
+          "Shima uchi",
+          "Fuji musume",
+          "Yodan uchi"
         ]
       },
       {
         "imageName" : "ImageSeason3_season",
-        "count" : "#БЛОК ЧЕТВЕРТЫЙ",
-        "title" : "АКИ",
-        "hoverText" : "ВИДЕЛИ ВСЁ НА СВЕТЕ<br/>МОИ ГЛАЗА - И ВЕРНУЛИСЬ<br/>К ВАМ, БЕЛЫЕ ХРИЗАНТЕМЫ.",
-        "hoverName" : "ИССЁ",
+        "count" : "#Блок четвертый",
+        "title" : "аки",
+        "hoverText" : "Видели всё на свете<br/>мои глаза - и вернулись<br/>к вам, белые хризантемы.",
+        "hoverName" : "Иссё",
         "description" : "Это время полной луны, когда невозможно оторвать от нее взгляда, а свет окутывает леса синим морем оттенков. Когда опускаются густые туманы, а белая роса покрывает густую зеленую траву. Это грусть последнего цветения, когда распускаются хризантемы, любование красотой которых продолжается бесконечно.",
         "numbers" : [
-          "YATAI BAYASHI",
-          "MORIOKA SANSA ODORI",
-          "ISAMI GOMA"
+          "Yatai bayashi",
+          "Morioka sansa odori",
+          "Isami goma"
         ]
       },
       {
         "imageName" : "ImageSeason4_season",
-        "count" : "#БЛОК ПЯТЫЙ",
-        "title" : "МОМИДЗИ",
-        "hoverText" : "О КЛЕНОВЫЕ ЛИСТЬЯ!<br/>КРЫЛЬЯ ВЫ ОБЖИГАЕТЕ<br/>ПРОЛЕТАЮЩИМ ПТИЦАМ",
-        "hoverName" : "СИКО",
+        "count" : "#Блок Пятый",
+        "title" : "Момидзи",
+        "hoverText" : "О кленовые листья!<br/>крылья вы обжигаете<br/>пролетающим птицам",
+        "hoverName" : "Сико",
         "description" : "Это время спасения от изнуряющей жары, когда воздух становится все прохладнее, а листья деревьев желтеют, укутывая равнины и склоны гор живописным золотистым ковром. Когда тысячи кленов словно полыхают из-за красной листвы. Это сезон Койо — традиции любования осенними красками.",
         "numbers" : [
-          "HAYAT",
-          "HA NO AKI",
-          "KAGARIBI"
+          "Hayat",
+          "Ha no aki",
+          "Kagaribi"
         ]
       },
       {
         "imageName" : "ImageSeason5_season",
-        "count" : "#БЛОК ШЕСТОЙ",
-        "title" : "ФУЮ",
-        "hoverText" : "И ПОЛЯ И ГОРЫ -<br/>СНЕГ ТИХОНЬКО ВСЕ УКРАЛ...<br/>СРАЗУ СТАЛО ПУСТО.",
-        "hoverName" : "ДЗЁСО",
+        "count" : "#Блок Шестой",
+        "title" : "Фую",
+        "hoverText" : "И поля и горы -<br/>снег тихонько все украл...<br/>сразу стало пусто.",
+        "hoverName" : "Дзёсо",
         "description" : "Это время срывающего листья северного ветра, когда холод сковывает деревья и заставляет замереть озера, а последние цветы отцветают. Это время первого снега, когда снежные хлопья тихо ложатся на ветки бамбука и сосен. Когда исчезают радуги, а небо становится прозрачным, как зеркало над голубыми облаками. Это сезон Юкими — традиции любования снегом и холодными красками мороза.",
         "numbers" : [
-          "ODORI UCHI",
-          "GEISHA KITSUNE",
-          "MILLENNIUM SONG"
+          "Odori uchi",
+          "Geisha kitsune",
+          "Millennium song"
         ]
       }
     ];
@@ -91,8 +91,8 @@ block content
 
   .season__main
     .season__main-wrap.wow.wowFadeUp(data-animation-delay="0.35s")
-      p.season__main-hash!= "#ШОУ-ПРОГРАММА"
-      +customBtn('season__main-cbtn', "ЯПОНСКИЕ СЕЗОНЫ")
+      p.season__main-hash!= "#Шоу-программа"
+      +customBtn('season__main-cbtn', "Японские сезоны")
 
 
   .season__concept
@@ -134,7 +134,7 @@ block content
         )
 
 
-      +customBtnId("#callback", 'cbutton--active season__container-cbtn js-popup wow wowFadeUp', "СТОИМОСТЬ")
+      +customBtnId("#callback", 'cbutton--active season__container-cbtn js-popup wow wowFadeUp', "Стоимость")
 
 block footer
   include ./components/_footer
