--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -136,6 +136,7 @@
           text-align: center
           transition: all .3s ease-in-out
           width: 180px
+          text-transform: uppercase
           +rmin(1440)
             width: 200px
           +rmin(1920)
@@ -272,6 +273,7 @@
       margin-top: 10px
 
     &-title
+      text-transform: uppercase
       font:
         weight: bold
       color: $colorFuelYellow
@@ -340,6 +342,7 @@
         left: 0
         width: 100%
         height: 100%
+        text-transform: uppercase
         padding-bottom: 45px
         background: -moz-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,0.8) 100%)
         background: -webkit-linear-gradient(top, rgba(0,0,0,0) 50%,rgba(0,0,0,0.8) 100%)
@@ -374,6 +377,7 @@
       text-align: center
       margin-bottom: 91px
       font-size: 19px
+      text-transform: uppercase
       +rmin(1440)
         margin-bottom: 131px
         font-size: 30px
