--- a/src/sass/components/_contacts.sass
+++ b/src/sass/components/_contacts.sass
@@ -86,11 +86,13 @@
   &__phone
     &-wrap
       margin-bottom: 25px
+      text-transform: uppercase
       +rmin(1440)
         margin-bottom: 50px
   &__email
     &-wrap
       margin-bottom: 90px
+      text-transform: uppercase
       +rmin(1440)
         margin-bottom: 120px
       +rmin(1920)
@@ -133,6 +135,7 @@
           left: 15px
           right: 15px
         background-color: transparent
+        text-transform: uppercase
         border: 3px solid $colorBlack
         font:
           weight: bold
@@ -166,6 +169,7 @@
         resize: none
         width: 100%
         min-height: 100px
+        text-transform: uppercase
         padding: 15px
         background-color: transparent
         border: 3px solid $colorBlack
@@ -186,6 +190,3 @@
           font-size: 22px
         +rmin(1920)
           font-size: 24px
-
-
-
