--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -51,6 +51,7 @@
       color: $colorNobel
       font-size: 12px
       letter-spacing: 1.6px
+      text-transform: uppercase
       +rmin(1440)
         font-size: 22px
       +rmin(1920)
@@ -60,6 +61,7 @@
     &-email
       position: relative
       font-weight: bold
+      text-transform: uppercase
 
       &:before
         content: ""
@@ -139,6 +141,7 @@
       justify-content: space-between
       transition: color 0.3s ease-in-out
       font-size: 10px
+      text-transform: uppercase
       +rmin(1440)
         font-size: 22px
       +rmin(1920)
