--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -87,6 +87,7 @@
   &__row
     z-index: 1
     position: relative
+    text-transform: uppercase
     padding:
       top: 0
       bottom: 77px
@@ -102,6 +103,7 @@
   &__back
     display: block
     padding-left: 30px
+    text-transform: uppercase
     font:
       weight: bold
     color: $colorNobel
