--- a/src/sass/components/_newsBlock.sass
+++ b/src/sass/components/_newsBlock.sass
@@ -57,6 +57,7 @@
       left: 0
       width: 100%
       height: 100%
+      text-transform: uppercase
       background-color: rgba(0,0,0,0.75)
       transition: opacity .3s ease-in-out, visibility .3s ease-in-out
 
