--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -161,6 +161,7 @@
       > p
         color: $colorNobel
         font-size: 11px
+        text-transform: uppercase
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
@@ -172,6 +173,9 @@
     &--right
       width: 100%
       padding-top: 0
+      padding-bottom: 40px
+      +rmin(1440)
+        padding-bottom: 50px
 
       .programs__block--reverse &
         padding-left: 50px
@@ -217,6 +221,7 @@
 
       h4
         margin: 10px 50px 10px 0
+        text-transform: uppercase
         font:
           weight: bold
         color: $colorFuelYellow
@@ -263,6 +268,7 @@
 
     &-title
       margin-bottom: 20px
+      text-transform: uppercase
       font:
         weight: bold
       color: $colorFuelYellow
