--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -21,6 +21,7 @@
       font:
         weight: bold
       text-align: center
+      text-transform: uppercase
       margin-bottom: 10px
       font-size: 13px
       letter-spacing: 1.1px
@@ -161,6 +162,7 @@
 
       p
         margin-bottom: 10px
+        text-transform: uppercase
         font:
           weight: bold
         text-align: center
@@ -192,6 +194,7 @@
       p
         margin-bottom: 10px
         font-size: 20px
+        text-transform: uppercase
         +rmin(1440)
           font-size: 35px
         +rmin(1920)
@@ -199,6 +202,7 @@
       span
         color: $colorFuelYellow
         font-size: 15px
+        text-transform: uppercase
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
@@ -336,6 +340,7 @@
       justify-content: center
       width: 100%
       margin-bottom: 10px
+      text-transform: uppercase
       background-color: $colorBlack
       font:
         weight: bold
