added php and fixed date ITA validation

--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -230,6 +230,7 @@
           left: 15px
           right: 15px
         background-color: transparent
+        text-transform: uppercase
         border: 3px solid $colorBlack
         font:
           weight: bold
