--- a/src/sass/components/_modal.sass
+++ b/src/sass/components/_modal.sass
@@ -14,6 +14,12 @@
     animation-duration: 0.5s
     animation-name: zoomIn
 
+  &__thanks
+    margin-bottom: 40px
+    p
+      font-size: 18px
+      color: white
+      
   &__form
     display: none
     animation-name: fadeOut
@@ -95,7 +101,7 @@
             svg
               fill: $colorBlack
               transition: fill 0.3s ease-in-out
-              
+
           .modal__form-field--left,
           .modal__form-field--right
             color: #000
