--- a/src/sass/components/_modal.sass
+++ b/src/sass/components/_modal.sass
@@ -11,22 +11,22 @@
     max-width: 600px
 
   .show &
-    animation-duration: 0.5s
-    animation-name: zoomIn
+    // animation-duration: 0.5s
+    // animation-name: zoomIn
 
   &__thanks
     margin-bottom: 40px
     p
       font-size: 18px
       color: white
-      
+
   &__form
     display: none
-    animation-name: fadeOut
+    // animation-name: fadeOut
 
     &.is-active
       display: block
-      animation-name: fadeIn
+      // animation-name: fadeIn
 
 
     &-choose
