--- a/src/pug/components/_modal.pug
+++ b/src/pug/components/_modal.pug
@@ -34,7 +34,9 @@
 
     p(js-count)!= "5 чел. / 50 000 p."
     span!= "ЯПОНСКИЕ СЕЗОНЫ"
-
+    input(type="hidden" name="programm" value="")
+    input(type="hidden" name="people" value="")
+      
     .modal__form-field
       input(type="text" name="name" placeholder="Ваше имя")
 
