--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -27,6 +27,7 @@
       p.order__form-title!= "Способ связи"
 
       .order__form-social
+        input(type="hidden" name="type")
         a(href="#" title="Phone" class="order__form-link")
           i.icon-phone
           i.icon-phone_hover
