--- a/src/pug/shared/_mixins.pug
+++ b/src/pug/shared/_mixins.pug
@@ -81,7 +81,7 @@ mixin prgramsBlock(className, imgName, hashText, title, time, text)
 
       p!= text
 
-      +customBtnId('#callback', 'cbutton--active programs__block-cbtn js-popup', "СТОИМОСТЬ")
+      +customBtnId('#callback', 'cbutton--active programs__block-cbtn js-order', "СТОИМОСТЬ")
 
 
 mixin programFullBlock(imgName, hashText, cbtnText, time)
