--- a/src/sass/components/_modal.sass
+++ b/src/sass/components/_modal.sass
@@ -68,6 +68,7 @@
         weight: bold
       color: $colorFuelYellow
       font-size: 20px
+      text-transform: uppercase
       margin-bottom: 20px
       +rmin(1440)
         font-size: 35px
@@ -80,6 +81,8 @@
       width: 100%
       min-height: 40px
       margin-bottom: 10px
+      input
+        text-transform: uppercase
 
       .modal__form-choose &
         cursor: pointer
